# msexpr

./: CMakeLists.txt  Changelog.md  README.md  msexpr-config.cmake.in
.circleci/: config.yml
include/msexpr/: deserializers.h  serializers.h  sexpr.h
src/: deserializers.c  serializers.c  sexpr.c  sexpr_ops.c  sexpr_ops.h  sexpr_stack.c  sexpr_stack.h  version.h.in
src/deserializer/: input.c  input.h  rivest_canonical_lexer.c  rivest_canonical_lexer.c.re2c  rivest_canonical_lexer.h  token.c  token.h
tests/: CMakeLists.txt  check_msexpr_sexpr.c  check_msexpr_sexpr_atom.c  check_msexpr_sexpr_atom_integer.c  check_msexpr_sexpr_atom_text.c  check_msexpr_sexpr_deserializers_input.c  check_msexpr_sexpr_deserializers_lexer_rivest_canonical.c  check_msexpr_sexpr_deserializers_parser_rivest_canonical.c  check_msexpr_sexpr_ops.c  check_msexpr_sexpr_serializers.c  check_msexpr_sexpr_stack.c
tests/data/basic_transport/: basic_transport01.txt  basic_transport02.txt
tests/data/canonical/: canonical01.txt  canonical02.txt  canonical03.txt
